update merit
